--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase": "^9.6.7",
     "firebase-tools": "^10.2.2",
     "formik": "^2.2.9",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
